--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,12 +1,18 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
     margin: 0;
 }
 
 .form-container {
     width: 100%;
     max-width: 400px;
+}
+
+.user{
+    padding: 30px 0px;
+}
+
+.form{
+    width: 300px;
 }
